add homepage & styling & anvbar

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,6 @@
-Welcome
+<div class="jumbotron center">
+  <h1> Welcome to Day One</h1>
+  <h2>Reach your goals</h2>
+  <p> <%= link_to "Sign up or Log in", "#", class: "btn btn-danger btn-lg" %></p>
+  
+</div>
