--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,2 +1,22 @@
+$navbar-default-bg: #C12200;
 @import "bootstrap-sprockets";
 @import "bootstrap";
+
+#logo {
+  float: left;
+  font-size: 1.7 em;
+  color: #fff;
+  text-transform: uppercase;
+  letter-spacing: -1px;
+  font-weight: bold;
+  
+}
+
+#logo:hover {
+  color: #ggg;
+  text-decoration: none;
+}
+
+.center {
+  text-align: center;
+}
