--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -20,3 +20,28 @@ $navbar-default-bg: #C12200;
 .center {
   text-align: center;
 }
+
+.jumbotron {
+  background-image: asset-url('cover_image.jpg');
+  background-size: cover;
+  height: 300px;    
+  background-position: 60% 20%;  
+
+  
+}
+
+.jumbotron h1, h2 {
+  color: #000;
+  text-align: center;
+  margin-bottom: 30px;
+  letter-spacing: -1px;
+  font-weight: bold;
+}
+
+.btn-xlarge {
+  background-color: #C12200;
+}
+
+.btn-xlarge:hover {
+  background-color: #000;
+}
