--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,28 @@
 <div class="jumbotron center">
   <h1> Welcome to Day One</h1>
   <h2>Reach your goals</h2>
-  <p> <%= link_to "Sign up or Log in", "#", class: "btn btn-danger btn-lg" %></p>
-  
+  <p> <%= link_to "Sign up or Log in", "#", class: "btn btn-danger btn-lg btn-xlarge" %></p>
+</div> <!-- end jumb -->
+
+<div class="container">
+<!-- Example row of columns -->
+<div class="row">
+  <div class="col-md-4">
+    <h2>Heading</h2>
+    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+    <p><a class="btn btn-primary" href="#" role="button">View details »</a></p>
+  </div>
+  <div class="col-md-4">
+    <h2>Heading</h2>
+    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+    <p><a class="btn btn-primary" href="#" role="button">View details »</a></p>
+ </div>
+  <div class="col-md-4">
+    <h2>Heading</h2>
+    <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+    <p><a class="btn btn-primary" href="#" role="button">View details »</a></p>
+  </div>
+</div>
+
+
 </div>
