--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,2 +1,28 @@
+<footer class=" footer">
   <hr>
-  <center><p>© 2016 Company, Inc.</p></center>
+<div class="container text-center">
+  <div class="row">
+    <div class="col-lg-12">
+      <div class="col-md-4 col-md-offset-4">
+            <ul class="nav nav-justified">
+          <li><%= link_to "about", "#" %> </li>
+          <li><%= link_to "blog", "#" %> </li>
+          <li><%= link_to "contact", "#" %> </li>          
+          <li><%= link_to "feedback", "#" %> </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+    <hr>
+
+    <div class="row">
+        <div class="col-lg-12">
+            <ul class="nav nav-justified">
+                <li><%= link_to "© 2017 Day One", "#" %> </li>
+                <li><a href="#">Terms of Service</a></li>
+                <li><a href="#">Privacy</a></li>
+            </ul>
+        </div>
+    </div>
+</div>
+</footer>  
