add Goal creation

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -45,3 +45,14 @@ $navbar-default-bg: #C12200;
 .btn-xlarge:hover {
   background-color: #000;
 }
+
+.description {
+  margin-top: 0px;
+}
+
+.well a {
+  color: #C12200;
+}
+.test {
+  color:red;
+}
