--- a/app/views/goals/show.html.erb
+++ b/app/views/goals/show.html.erb
@@ -14,5 +14,11 @@
         <small><%= @goal.user.username.capitalize %></small>
     </p>
     <div class="pull-right">created: <%= time_ago_in_words(@goal.created_at) %> ago</div>
-  </p>
+    <div class="goal-actions">
+      <%= link_to "Edit this goal", edit_goal_path(@goal), class: "btn btn-xs btn-default" %></div>
+      <%= link_to "Delete this goal", goal_path(@goal), method: :delete,
+      data: { confirm: "Are you sure you want to delete this goal?" }, class: "btn btn-xs btn-danger" %> </div>
+
+
+  
 </div>
