--- a/app/views/goals/show.html.erb
+++ b/app/views/goals/show.html.erb
@@ -15,10 +15,15 @@
     </p>
     <div class="pull-right">created: <%= time_ago_in_words(@goal.created_at) %> ago</div>
     <div class="goal-actions">
-      <%= link_to "Edit this goal", edit_goal_path(@goal), class: "btn btn-xs btn-default" %></div>
+      <%= link_to "Edit this goal", edit_goal_path(@goal), class: "btn btn-xs btn-default" %>
+    </div>
       <%= link_to "Delete this goal", goal_path(@goal), method: :delete,
-      data: { confirm: "Are you sure you want to delete this goal?" }, class: "btn btn-xs btn-danger" %> </div>
+      data: { confirm: "Are you sure you want to delete this goal?" }, class: "btn btn-xs btn-danger" %> 
+     <%= link_to "Return to all Goals", goals_path, class: "btn btn-xs btn-primary" %>
 
+      
+    </div>
+      
 
-  
 </div>
+
