--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -24,5 +24,16 @@
             </ul>
         </div>
     </div>
+    Temporary
+    <div class="row">
+        <div class="col-lg-12">
+            <ul class="nav nav-justified">
+                <li><%= link_to "All goals", goals_path %> </li>
+                <li><%= link_to "Home", root_path %> </li>
+                <li><%= link_to "New", new_goal_path %> </li>
+
+            </ul>
+        </div>
+    </div>
 </div>
 </footer>  
