--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,14 @@
-<%= render 'shared/pagetitle', title: "Your Profile" %>
+<%= render 'shared/pagetitle', title: "#{@user.username.capitalize}'s Profile" %>
+
+<div class="row">
+  
+  <div class="col-md-4 col-md-offset-4 center">
+    <%= gravatar_for @user, size: 150 %>
+  </div>
+</div> <!-- row end -->
+
+
+<h4 align="center"> <%= @user.username.capitalize %>'s Goals"</h4>
+
+<%= render 'goals/goal', obj: @user.goals %>
+    
