--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,5 @@
-<%= render 'shared/pagetitle', title: "Sign up" %>
+<%= render 'shared/pagetitle', title: "Edit your profile" %>
 
 <%= render 'shared/errors', obj: @user %>
-
 
 <%= render 'form' %>
