--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -56,3 +56,13 @@ $navbar-default-bg: #C12200;
 .test {
   color:red;
 }
+.listing {
+  list-style: none;
+  padding-left: 0;
+}
+
+.user-title {
+  color: #073B15;
+  font-weight: bold;
+  font-size: 1.25em;
+}
