--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -41,7 +41,7 @@
       </div>
     <% end %>
     <div class="col-md-4 col-md-offset-4 colormatch">
-      [ <%= link_to "Cancel request and return to goals listing",  goals_path %> ]
+      [ <%= link_to "Don't have an account? Sign up now!",  signup_path %> ]
     </div>
   </div>
 </div>
