--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -14,20 +14,22 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-        <li> <%= link_to "Log in", login_path %></li>        
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Goals <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><%=link_to "Create a new goal", new_goal_path %></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-            <li role="separator" class="divider"></li>
-            <li> <%= link_to "Log out", logout_path %></li>        
-          </ul>
-        </li>
+        <li> <%= link_to "View all goals", goals_path %></li>
+        <li> <%= link_to "Placeholder link", "#" %></li>        
+          <% if logged_in? %>
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Goals <span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                  <li> <%= link_to "Placeholder link", "#" %></li> 
+                  <li> <%= link_to "Placeholder link", "#" %></li> 
+                  <li> <%= link_to "Placeholder link", "#" %></li> 
+                  <li role="separator" class="divider"></li>
+                 <li> <%= link_to "Placeholder link", "#" %></li> 
+                  <li role="separator" class="divider"></li>
+                  <li> <%= link_to "Placeholder link", "#" %></li> 
+                </ul>
+              </li>
+          <% end %>
       </ul>
       <form class="navbar-form navbar-left">
         <div class="form-group">
@@ -36,16 +38,23 @@
         <button type="submit" class="btn btn-default">Submit</button>
       </form>
       <ul class="nav navbar-nav navbar-right">
-            <li><%=link_to "Create a new goal", new_goal_path %></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li role="separator" class="divider"></li>
-            <li> <%= link_to "Log out", logout_path %></li>        
-          </ul>
+        
+        <% if logged_in? %>
+        
+          <li><%=link_to "Create a new goal", new_goal_path %></li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= current_user.username.capitalize %>'s profile <span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                <li> <%= link_to "View your profile", user_path(current_user) %></li>     
+                <li> <%= link_to "Edit profile", edit_user_path(current_user) %></li>     
+                <li> <%= link_to "Future link", "#" %></li>     
+                <li role="separator" class="divider"></li>
+                <li> <%= link_to "Log out", logout_path %></li>   
+        <% else %>
+                <li> <%= link_to "Sign up", signup_path %></li>      
+                <li> <%= link_to "Log in", login_path %></li>      
+        <% end %>
+              </ul>
         </li>
       </ul>
     </div><!-- /.navbar-collapse -->
