--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -12,9 +12,12 @@
           <li><%= link_to gravatar_for(user), user_path(user) %></li>
           <li class="user-title"><%= link_to user.username.capitalize, 
                                          user_path(user) %></li>
-    <li><small><%= pluralize(user.goals.count, "goal") if user.goals %> </small></li>
-    <li><%= link_to "delete this user", user_path(user), method: :delete,
-          data: {confirm: "are you sure you want to delete this user?"}  %></li>
+          <li><small><%= pluralize(user.goals.count, "goal") if user.goals %> </small></li>
+          
+          <% if logged_in? && current_user.admin? && !user.admin %>
+          <li><%= link_to "delete this user", user_path(user), method: :delete,
+                data: {confirm: "are you sure you want to delete this user?"}  %></li>
+          <% end %>
         </div>
       </div>
     </ul>      
