--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -43,7 +43,7 @@
         
           <li><%=link_to "Create a new goal", new_goal_path %></li>
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= current_user.username.capitalize %>'s profile <span class="caret"></span></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= current_user.username.capitalize %>'s <%= "(Admin)" if current_user.admin? %> Profile  <span class="caret"></span></a>
               <ul class="dropdown-menu">
                 <li> <%= link_to "View your profile", user_path(current_user) %></li>     
                 <li> <%= link_to "Edit profile", edit_user_path(current_user) %></li>     
