--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -14,8 +14,8 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li> <%= link_to "View all goals", goals_path %></li>
-        <li> <%= link_to "Placeholder link", "#" %></li>        
+        <li> <%= link_to "All Goals", goals_path %></li>
+        <li> <%= link_to "All Users", users_path %></li>        
           <% if logged_in? %>
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Goals <span class="caret"></span></a>
