--- a/app/views/goals/show.html.erb
+++ b/app/views/goals/show.html.erb
@@ -8,7 +8,7 @@
   <hr>
   <div class="pull-right">
   <p class="center">   <em> Created by:</em>
-  <%= link_to gravatar_for(@goal.user), goals_path %>
+  <%= link_to gravatar_for(@goal.user), user_path(@goal.user) %>
   </p>
   <p class="center">
         <small><%= @goal.user.username.capitalize %></small>
