--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -24,12 +24,28 @@
                   <li> <%= link_to "Placeholder link", "#" %></li> 
                   <li> <%= link_to "Placeholder link", "#" %></li> 
                   <li role="separator" class="divider"></li>
-                 <li> <%= link_to "Placeholder link", "#" %></li> 
+                  <li> <%= link_to "Placeholder link", "#" %></li> 
                   <li role="separator" class="divider"></li>
                   <li> <%= link_to "Placeholder link", "#" %></li> 
                 </ul>
               </li>
           <% end %>
+          
+           <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Categories <span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                  <li> <%= link_to "All Categories", categories_path %></li>
+                    <% if logged_in? && current_user.admin? %>
+                      <li role="separator" class="divider"></li>
+                      <li> <%= link_to "Create a new category", new_category_path %></li> 
+                    <% end %>
+                  <li role="separator" class="divider"></li>
+                 <% Category.all.each do |cat| %>
+                 <li> <%= link_to cat.name.capitalize, category_path(cat) %>  </li> 
+                 <% end %>
+                </ul>
+              </li>
+          
       </ul>
       <form class="navbar-form navbar-left">
         <div class="form-group">
@@ -43,7 +59,8 @@
         
           <li><%=link_to "Create a new goal", new_goal_path %></li>
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= current_user.username.capitalize %>'s <%= "(Admin)" if current_user.admin? %> Profile  <span class="caret"></span></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+            <%= current_user.username.capitalize %>'s <%= "(Admin)" if current_user.admin? %> Profile  <span class="caret"></span></a>
               <ul class="dropdown-menu">
                 <li> <%= link_to "View your profile", user_path(current_user) %></li>     
                 <li> <%= link_to "Edit profile", edit_user_path(current_user) %></li>     
