--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -69,3 +69,7 @@ $navbar-default-bg: #C12200;
 .input_checkbox input {
   width: auto !important;
 }
+.position-comments {
+  float:left;
+  clear: both;
+}
