--- a/app/views/goals/index.html.erb
+++ b/app/views/goals/index.html.erb
@@ -1,7 +1,7 @@
 <%= render 'shared/pagetitle', title: "All Goals" %>
 
-<%= will_paginate @goals %>
+<center><%= will_paginate @goals %></center>
 
 <%= render 'goal', obj: @goals %>
 
-<%= will_paginate @goals %>
+<center><%= will_paginate @goals %></center>
