--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -35,13 +35,10 @@
       </div>
       
       <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
+        <div class="col-md-12 center">
           <%= f.submit(@user.new_record? ? "Create my account" : "Update my profile", class: "btn btn-primary btn-lg btn-xlarge") %>
         </div>
       </div>
     <% end %>
-    <div class="col-md-4 col-md-offset-4 colormatch">
-      [ <%= link_to "Don't have an account? Sign up now!",  signup_path %> ]
-    </div>
   </div>
 </div>
