--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -20,10 +20,7 @@
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Goals <span class="caret"></span></a>
                 <ul class="dropdown-menu">
-                  <li> <%= link_to "Placeholder link", "#" %></li> 
-                  <li> <%= link_to "Placeholder link", "#" %></li> 
-                  <li> <%= link_to "Placeholder link", "#" %></li> 
-                  <li role="separator" class="divider"></li>
+                  <li><%=link_to "Create a new goal", new_goal_path %></li>
                   <li> <%= link_to "Placeholder link", "#" %></li> 
                   <li role="separator" class="divider"></li>
                   <li> <%= link_to "Placeholder link", "#" %></li> 
