--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <div class="jumbotron center">
   <h1> Welcome to Day One</h1>
   <h2>Reach your goals</h2>
-  <p> <%= link_to "Sign up or Log in", "#", class: "btn btn-danger btn-lg btn-xlarge" %></p>
+  <p> <%= link_to "Sign up or Log in", signup_path, class: "btn btn-danger btn-lg btn-xlarge" %></p>
 </div> <!-- end jumb -->
 
 <div class="container">
