--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -4,3 +4,6 @@
 
 
 <%= render 'form' %>
+<div class="col-md-4 col-md-offset-4 colormatch center">
+      [ <%= link_to "Already have an account? Login here!",  login_path %> ]
+    </div>
