--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-md-12">
-    <%= form_for(@user, :html => {class: "form-horizontal", role: "form"}) do |f| %>
+    <%= form_for(@user, :html => {class: "form-horizontal", multipart: true, role: "form"}) do |f| %>
       <div class="form-group">
         <div class="control-label col-md-2">
           <%= f.label :username %>
@@ -31,6 +31,15 @@
         </div>
         <div class="col-md-8">
           <%= f.password_field :password, class: "form-control", placeholder: "Confirm password" %>
+        </div>
+      </div>
+      
+      <div class="form-group">
+        <div class="control-label col-md-2">
+          <%= f.label :profileimage, "Add Image" %>
+        </div>
+        <div class="col-md-8">
+          <%= f.file_field :profileimage, accept: 'image/jpeg,image/gif,image/png' %>
         </div>
       </div>
       
