--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -73,3 +73,45 @@ $navbar-default-bg: #C12200;
   float:left;
   clear: both;
 }
+
+.showprofile {
+    border-radius: 15%;
+    padding: 20px; 
+    width: 100%;
+    height: 100%; 
+}
+.indexprofile {
+    border-radius: 10%;
+    padding: 20px; 
+    width: 50%;
+    height: 50%; 
+}
+.defaultprofile {
+    border-radius: 10%;
+    padding: 20px; 
+    width: 150%;
+    height: 150%; 
+}
+.commentpic {
+    border-radius: 50%;
+    padding: 0px; 
+    margin: 10px;
+    max-width: 120px;
+    max-height: 120px; 
+    border-style: solid;
+    border-width: 1px;
+    border-color: grey;
+  
+}
+
+.navpic {
+    border-radius: 50%;
+    padding: 0px; 
+    margin: 10px;
+    max-width: 70px;
+    max-height: 70px; 
+    border-style: solid;
+    border-width: 1px;
+    border-color: grey;
+  
+}
