--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,7 +3,13 @@
 <div class="row">
   
   <div class="col-md-4 col-md-offset-4 center">
-    <%= gravatar_for @user, size: 150 %>
+    <% if @user.profileimage? %>
+                <%= link_to image_tag(@user.profileimage), user_path(@user),  class: "indexprofile" %>
+            <% else %>
+                <%= image_tag "user-default.png", class: "showprofile" %>
+            <% end %>  
+            
+
   </div>
 </div> <!-- row end -->
 
