lots of changes, basically fixing user crud with devise

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,15 @@
   <body>
     <%= render 'layouts/navigation' %>
     <%= render 'layouts/messages' %>
-     
+    
+    
+   <% if notice %>
+   <center>
+   <p class="notice"><% notice %></p>
+   <% elsif alert %>
+   <p class="alert"><% alert %></p>
+   </center>
+   <% end %>
     
     <div class="container">
     <%= yield %>
