--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -115,3 +115,16 @@ $navbar-default-bg: #C12200;
     border-color: grey;
   
 }
+.edituseralign {
+  // display: table-cell;
+  // vertical-align: bottom;
+  // float: none;
+  // background: red;
+}
+// .vertical-center {
+//   min-height: 100%;  /* Fallback for browsers do NOT support vh unit */
+//   min-height: 100vh; /* These two lines are counted as one :-)       */
+//   max-height: 200px;
+//   display: flex;
+//   align-items: center;
+// }
