--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default">
+  <nav class="navbar navbar-default">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -16,7 +16,7 @@
       <ul class="nav navbar-nav">
         <li> <%= link_to "All Goals", goals_path %></li>
         <li> <%= link_to "All Users", users_path %></li>        
-          <% if logged_in? %>
+          <% if user_signed_in? %>
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Goals <span class="caret"></span></a>
                 <ul class="dropdown-menu">
@@ -32,7 +32,8 @@
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Categories <span class="caret"></span></a>
                 <ul class="dropdown-menu">
                   <li> <%= link_to "All Categories", categories_path %></li>
-                    <% if logged_in? && current_user.admin? %>
+                    <% if user_signed_in? %> 
+                    <!--&& current_user.admin? -->
                       <li role="separator" class="divider"></li>
                       <li> <%= link_to "Create a new category", new_category_path %></li> 
                     <% end %>
@@ -42,42 +43,62 @@
                  <% end %>
                 </ul>
               </li>
-          
-      </ul>
-      <form class="navbar-form navbar-left">
-        <div class="form-group">
-         <input type="text" class="form-control" placeholder="Search coming soon">
-        </div>
-        <button type="submit" class="btn btn-default">Search</button>
-      </form>
+              </ul>
+                <form class="navbar-form navbar-left">
+                  <div class="form-group">
+                   <input type="text" class="form-control" placeholder="Search coming soon">
+                  </div>
+                  <button type="submit" class="btn btn-default">Search</button>
+                </form>
+                
+                
       <ul class="nav navbar-nav navbar-right">
         
-        <% if logged_in? %>
-        
-          <li><%=link_to "Create a new goal", new_goal_path %></li>
-          <li class="dropdown">
+        <% if user_signed_in? %>
+        <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
               
-            <!--<% if current_user.profileimage? %>-->
-            <!--    <%= link_to image_tag(current_user.profileimage,  class: "navpic"), user_path(current_user) %>-->
-            <!--<% else %>-->
-            <!--    <%= link_to image_tag("user-default.png", class: "navpic"), user_path(current_user) %>-->
-            <!--<% end %>               -->
-            
-            <%= current_user.username.capitalize %>'s <%= "(Admin)" if current_user.admin? %> Profile  <span class="caret"></span></a>
+            <%= current_user.username.capitalize %>'s Menu  <span class="caret"></span></a>
               <ul class="dropdown-menu">
+                    <li><%= link_to "Create a new goal", new_goal_path %></li>
+
                 <li> <%= link_to "View your profile", user_path(current_user) %></li>     
-                <li> <%= link_to "Edit profile", edit_user_path(current_user) %></li>     
-                <li> <%= link_to "Future link", "#" %></li>     
-                <li role="separator" class="divider"></li>
-                <li> <%= link_to "Log out", logout_path %></li>   
+                <li> <%= link_to "Edit profile", edit_user_path(current_user) %></li>  
+                <li><%= link_to "Edit devise user", edit_user_registration_path %> </li>
+
+                <li> <%= link_to "Log out", destroy_user_session_path, :method => :delete %></li>   
         <% else %>
-                <li> <%= link_to "Sign up", signup_path %></li>      
-                <li> <%= link_to "Log in", login_path %></li>      
+                <li> <%= link_to "Sign up", new_user_registration_path %></li>      
+                <li> <%= link_to "Log in", new_user_session_path %></li>      
         <% end %>
               </ul>
+              
         </li>
       </ul>
+      
+       <ul class="nav navbar-nav navbar-right">
+        
+        <% if user_signed_in? %>
+        <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+              
+            <%= current_user.username.capitalize %>'s Devise Menu  <span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                    <li><%=link_to "Create a new goal", new_goal_path %></li>
+
+                <li> <%= link_to "View your profile", user_path(current_user) %></li>     
+                <li> <%= link_to "Edit profile", edit_user_path(current_user) %></li>     
+                <li> <%= link_to "Log out", destroy_user_session_path %></li>   
+        <% else %>
+                <li> <%= link_to "Devise Sign up", new_user_registration_path %></li>      
+                <li> <%= link_to "Devise Log in", new_user_session_path %></li>      
+        <% end %>
+              </ul>
+              
+        </li>
+      </ul>
+        
+          
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
