--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -10,19 +10,14 @@
       <div class="row">
         <div class="well col-md-4 col-md-offset-4">
           <li>
-            
-            <% if user.profileimage? %>
                 <%= link_to image_tag(user.profileimage), user_path(user),  class: "indexprofile" %>
-            <% else %>
-                <%= link_to image_tag("user-default.png"), user_path(user),  class: "defaultprofile" %>
-            <% end %>
           </li>
           <li class="user-title"><%= link_to user.username.capitalize, 
                                          user_path(user) %></li>
           <li><small><%= pluralize(user.goals.count, "goal") if user.goals %> </small></li>
 
           
-          <% if logged_in? && current_user.admin? && !user.admin %>
+          <% if user_signed_in? %> *** re-visit this && current_user.admin? && !user.admin %>
           <li><%= link_to "delete this user", user_path(user), method: :delete,
                 data: {confirm: "are you sure you want to delete this user?"}  %></li>
           <% end %>
