--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,17 +23,14 @@
     <%= render 'layouts/messages' %>
     
     
-   <% if notice %>
-   <center>
-   <p class="notice"><% notice %></p>
-   <% elsif alert %>
-   <p class="alert"><% alert %></p>
-   </center>
-   <% end %>
-    
-    <div class="container">
+      <div class="container">
+      <% flash.each do |message_type, message| %>
+        <div id="flash" class="flash-<%= message_type %>"> <%= message %> </div>
+        <% end %>
+      
     <%= yield %>
     </div>
+    
     <%= render 'layouts/footer' %>
   </body>
 </html>
