--- a/app/views/layouts/_messages.html.erb
+++ b/app/views/layouts/_messages.html.erb
@@ -1,12 +1,21 @@
 <div class="row">
-  <div class="col-md-10 col-md-offset-1">
-    <% flash.each do |name, msg| %>
-      <div class="alert alert-<%= name %>">
-        <a href="#" class="close" data-dismiss="alert">&#215;</a>
+  <div class="col-xs-8 col-xs-offset-2">
+    <% flash.each do |type, msg| %>
+      <% if type == "notice" %>
+        <div class="alert alert-success">
+      <% elsif type == "alert" %>
+        <div class="alert alert-danger">
+      <% else %>
+        <div class='alert alert-<%= "#{type}" %>'>
+      <% end %>
+      <a href="#" class="close" data-dismiss="alert">&#215;</a>
+      <ul>
+        <li>
           <%= msg %>
-      </div> 
+        </li>
+      </ul>
     <% end %>
   </div>
+    <div class="col-xs-4 col-xs-offset-8">
 </div>
-
- 
+</div>
