--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -32,11 +32,10 @@
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Categories <span class="caret"></span></a>
                 <ul class="dropdown-menu">
                   <li> <%= link_to "All Categories", categories_path %></li>
-                    <% if user_signed_in? %> 
-                    <!--&& current_user.admin? -->
+                    <% if user_signed_in? && current_user.admin? %>
                       <li role="separator" class="divider"></li>
-                      <li> <%= link_to "Create a new category", new_category_path %></li> 
-                    <% end %>
+                      <li> <%= link_to "Create a new category", new_category_path  %></li> 
+                      <% end %>
                   <li role="separator" class="divider"></li>
                  <% Category.all.each do |cat| %>
                  <li> <%= link_to cat.name.capitalize, category_path(cat) %>  </li> 
@@ -55,6 +54,9 @@
       <ul class="nav navbar-nav navbar-right">
         
         <% if user_signed_in? %>
+          <% if user_signed_in? && current_user.admin? %>
+        <li> <%= link_to "User Dashboard", user_dashboard_path %></li>
+          <% end %>
         <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
               
