--- a/app/views/comments/_comments.html.erb
+++ b/app/views/comments/_comments.html.erb
@@ -2,5 +2,5 @@
   <%= render(partial: 'comments/comment', object: comment) %>
 <% end %>
 <div align="center">
-  <%= will_paginate comments %>
+  <!--< will_paginate comments %>-->
 </div>
