--- a/app/views/goals/index.html.erb
+++ b/app/views/goals/index.html.erb
@@ -1,7 +1,6 @@
 <%= render 'shared/pagetitle', title: "All Goals" %>
 
-<center><%= will_paginate @goals %></center>
+<!--<center><= will_paginate @goals %></center>-->
 
 <%= render 'goal', obj: @goals %>
 
-<center><%= will_paginate @goals %></center>
