--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,7 +1,7 @@
 <%= render 'shared/pagetitle', title: "Showing all Users" %>
 
 <div align="center">
-  <%= will_paginate %>
+  <!--<= will_paginate %>-->
 </div>
 
 <div align="center">
