--- a/app/views/goals/show.html.erb
+++ b/app/views/goals/show.html.erb
@@ -18,7 +18,7 @@
     </p>
     <div class="pull-right">created: <%= time_ago_in_words(@goal.created_at) %> ago</div>
     <div class="goal-actions">
-      <% if logged_in? && current_user == @goal.user || current_user && current_user.admin? %>
+      <% if user_signed_in? && current_user == @goal.user || current_user && current_user.admin? %>
           <%= link_to "Edit this goal", edit_goal_path(@goal), class: "btn btn-xs btn-default" %>
           <%= link_to "Delete this goal", goal_path(@goal), method: :delete,
           data: { confirm: "Are you sure you want to delete this goal?" }, class: "btn btn-xs btn-danger" %> 
@@ -33,7 +33,7 @@
 
 
 <hr>
-<% if logged_in? %>
+<% if user_signed_in? %>
   <div class="row">
     <div class="col-md-10 col-md-offset-1">
       <h4> Add a new comment</h4>
